--- a/css/styles.css
+++ b/css/styles.css
@@ -28,13 +28,17 @@ ol {
   padding-left: 0;
 }
 
+img {
+  display: block;
+}
+
 .body {
   background-color: var(--white);
 }
 
 /* general styles */
 .container {
-  width: 100%;
+  width: 1158px;
   max-width: 1470px;
   padding: 0 15px;
   margin: 0 auto;
@@ -106,25 +110,24 @@ ol {
   color: var(--white);
 }
 
-.standard-container {
-  padding: 120px 156px 60px 156px;
-}
-
 .standard-list {
   display: flex;
   gap: 24px;
 }
 
 /* header */
+.header {
+  border-bottom: 1px solid var(--cornflower);
+}
+
 .header-container {
   display: flex;
-  padding: 24px 156px;
   border-bottom: 1px solid var(--cornflower);
-  background: var(--white);
 }
 
 .logo {
   color: var(--iris);
+  margin-right: 76px;
   font-size: 18px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -150,14 +153,20 @@ ol {
   gap: 40px;
 }
 
+.header-nav-item {
+  padding: 24px 0;
+}
+
 .header-address {
   font-style: normal;
 }
 
 .header-address-list {
   display: flex;
+  padding: 24px 0;
   gap: 40px;
 }
+
 .header-link {
   color: var(--navyblue);
   font-size: 16px;
@@ -186,7 +195,7 @@ ol {
 }
 
 .hero-container {
-  padding: 188px 472px 276px 472px;
+  padding: 188px 0;
   display: flex;
   flex-direction: column;
   gap: 48px;
@@ -195,6 +204,7 @@ ol {
 
 .hero-title {
   color: var(--white);
+  max-width: 496px;
   text-align: center;
   font-size: 56px;
   font-style: normal;
@@ -205,27 +215,61 @@ ol {
 
 .hero-btn {
   padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
 }
 
 /* principles section */
-.principles-title {
-  display: none;
+.principles-container {
+  padding: 120px 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.principles-subtitle {
+  margin-bottom: 8px;
+}
+
+.principles-list-item {
+  width: calc((100% - 72px) / 4);
 }
 
 /* services section */
-
-.services-list {
-  margin-top: 72px;
+.services-container {
+  padding: 120px 0;
 }
 
+.services-title {
+  margin-bottom: 72px;
+}
 
+.services-list-item {
+  width: calc((100% - 48px) / 3);
+}
 /* team section */
 .team {
   background-color: var(--cloud);
 }
 
+.team-title {
+  margin-top: 72px;
+}
+
 .team-container {
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 
 .team-list {
@@ -234,6 +278,7 @@ ol {
 
 .team-list-item {
   background: var(--white);
+  width: calc((100% - 72px) / 4);
   padding-bottom: 32px;
   text-align: center;
   border-radius: 0px 0px 4px 4px;
@@ -250,7 +295,7 @@ ol {
 }
 
 .footer-container {
-  padding: 100px 156px;
+  padding: 100px 0;
 }
 
 .footer-logo span, 
@@ -269,7 +314,7 @@ ol {
 }
 
 .portfolio-container {
-  padding: 96px 156px 120px 156px;
+  padding: 96px 0 120px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
