--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,8 @@ img {
   gap: 40px;
 }
 
-.header-nav-item {
+.header-nav-item,
+.header-address-item {
   padding: 24px 0;
 }
 
@@ -163,7 +164,6 @@ img {
 
 .header-address-list {
   display: flex;
-  padding: 24px 0;
   gap: 40px;
 }
 
@@ -192,10 +192,10 @@ img {
 /* hero section */
 .hero {
   background: var(--navyblue);
+  padding: 188px 0;
 }
 
 .hero-container {
-  padding: 188px 0;
   display: flex;
   flex-direction: column;
   gap: 48px;
@@ -221,7 +221,7 @@ img {
 }
 
 /* principles section */
-.principles-container {
+.principles {
   padding: 120px 0;
 }
 
@@ -248,7 +248,7 @@ img {
 }
 
 /* services section */
-.services-container {
+.services {
   padding: 120px 0;
 }
 
@@ -262,18 +262,11 @@ img {
 /* team section */
 .team {
   background-color: var(--cloud);
-}
-
-.team-title {
-  margin-top: 72px;
-}
-
-.team-container {
   padding: 120px 0;
 }
 
-.team-list {
-  margin-top: 72px;
+.team-title {
+  margin: 72px 0;
 }
 
 .team-list-item {
@@ -285,17 +278,26 @@ img {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+.team-item-content {
+  padding: 32px 16px;
+}
+
 .team-subtitle {
-  margin: 32px 0 8px 0;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.team-list-text {
+  text-align: center;
 }
 
 /* footer */
 .footer {
   background: var(--navyblue);
+  padding: 100px 0;
 }
 
 .footer-container {
-  padding: 100px 0;
 }
 
 .footer-logo span, 
@@ -304,8 +306,12 @@ img {
 }
 
 .footer-text {
-  margin-top: 8px;
   max-width: 264px;
+}
+
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 /* portfolio */
@@ -326,7 +332,6 @@ img {
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-
 }
 
 .portfolio-showcase-item {
